--- a/index.html
+++ b/index.html
@@ -53,8 +53,11 @@
                     <div id="bump"></div>
                 </div>
                 <div class="pure-g">
-                    <div class="pure-u-1-2">
+                  <div class="pure-u-1-1">
                         <h2>Gender breakdown of all artists</h2>
+                        </div>
+                        
+                      <div class="pure-u-1-2">
                         <div id="isotype"></div>
                     </div>
                     <div class="pure-u-1-2">
