--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
                     <h2>Global distribution of artworks</h2>
                     <div id="global_map"></div>
                     <p>
-                        Zooming out, our global map offers a comprehensive view of MoMA's worldwide influence. By illustrating the dispersion of artworks, this visualization underlines the museum's role as a cultural ambassador, fostering a cross-cultural dialogue through the language of art.
-
-                      Additionally, the visualization highlights that among the top countries contributing significantly to MoMA's collection are the
+                        The visualization highlights that among the top countries contributing significantly to MoMA's collection are the
                         <b>United States, Spain, and Russia</b>
                         . This underscores the global nature of MoMA's acquisitions, showcasing a diverse range of artistic expressions and cultural influences from these nations.
                     </p>
@@ -56,7 +54,7 @@
                   <div class="pure-u-1-1">
                         <h2>Gender breakdown of all artists</h2>
                         </div>
-                        
+
                       <div class="pure-u-1-2">
                         <div id="isotype"></div>
                     </div>
@@ -64,7 +62,7 @@
                         <div id="pie"></div>
                     </div>
                     <div class="pure-u-1-1">
-                        <p>Delving into the collection's gender breakdown, we observe a notable majority of male artists, surpassing their female counterparts. This visualization prompts us to reflect on the historical context of art creation, shedding light on gender disparities within the art world. It serves as a call to action, emphasizing the importance of fostering inclusivity and equality in artistic representation.</p>
+                        <p>Delving into the collection's gender breakdown, we observe a notable majority of male artists, surpassing their female counterparts.</p>
                     </div>
                 </div>
             </div>
@@ -80,7 +78,7 @@
                     <h2>Distribution of works between the time taken, the country and the number of art pieces created</h2>
                     <div id="scatter_plot"></div>
                     <p>
-                        This choice enables the exploration of potential patterns or correlations between the temporal aspect of art creation and the overall quantity of artworks across different nations. The scatter plot not only facilitates the identification of trends and outliers but also allows for a comparative analysis of countries, shedding light on their relative efficiency in art production. Through this visual representation, it becomes easier to discern if certain countries consistently produce art more quickly or take more time to create fewer pieces. Moreover, the scatter plot serves as an insightful tool for correlation analysis, providing a quick and accessible means to gauge the nature and strength of the relationship between the two variables—time taken and the number of art pieces—thereby contributing to a comprehensive understanding of artistic production dynamics on a global scale.
+                       Through this visual representation, it becomes easier to discern if certain countries consistently produce art more quickly or take more time to create fewer pieces. Moreover, the scatter plot serves as an insightful tool for correlation analysis, providing a quick and accessible means to gauge the nature and strength of the relationship between the two variables—time taken and the number of art pieces—thereby contributing to a comprehensive understanding of artistic production dynamics on a global scale.
                     </p>
                     <div id="bar"></div>
                 </div>
@@ -110,12 +108,6 @@
                     </p>
                     <p>
                       Lodha, P. (n.d.). Diversity of Artists in Major U.S. Museums | Tableau Public. Retrieved October 11, 2023, from <a href=https://public.tableau.com/app/profile/preethilo/viz/DiversityofArtistsinMajorU_S_Museums_16557547058490/DiversityInUSMuseums>https://public.tableau.com/app/profile/preethilo/viz/DiversityofArtistsinMajorU_S_Museums_16557547058490/DiversityInUSMuseums</a>
-                    </p>
-                    <p>
-                      Reid, M. (n.d.). Museum of Modern Art Collection | Tableau Public. Retrieved October 11, 2023, from <a href=https://public.tableau.com/app/profile/marc.reid/viz/MuseumofModernArtCollection_15892909730050/MuseumofModernArtCollection>https://public.tableau.com/app/profile/marc.reid/viz/MuseumofModernArtCollection_15892909730050/MuseumofModernArtCollection</a>
-                    </p>
-                    <p>
-                      Roeder, O. (2015, August 28). A Nerd’s Guide To The 2,229 Paintings At MoMA. FiveThirtyEight. <a href=https://fivethirtyeight.com/features/a-nerds-guide-to-the-2229-paintings-at-moma/> https://fivethirtyeight.com/features/a-nerds-guide-to-the-2229-paintings-at-moma/ </a>
                     </p>
                     <p>
                       Romeo, F. (2015, October 27). Here’s a roundup of how people have used MoMA’s data so far. Medium. <a href=https://medium.com/@foe/here-s-a-roundup-of-how-people-have-used-our-data-so-far-80862e4ce220>https://medium.com/@foe/here-s-a-roundup-of-how-people-have-used-our-data-so-far-80862e4ce220</a>
