--- a/index.html
+++ b/index.html
@@ -68,13 +68,6 @@
             </div>
             <div class="pure-g">
                 <div class="pure-u-1-1">
-                    <h2>Department vs Gender Breakdown</h2>
-                    <div id="splitbar" class="center-container"></div>
-                    <p>By exploring the distribution of genders across different art departments, we gain insights into the diverse narratives and perspectives captured by each department.</p>
-                </div>
-            </div>
-            <div class="pure-g">
-                <div class="pure-u-1-1">
                     <h2>Distribution of works between the time taken, the country and the number of art pieces created</h2>
 
                     <div id="scatter_plot" class="center-container"></div>
@@ -129,9 +122,9 @@
         vegaEmbed('#choropleth_map', vis1, {"actions": false}).then(function(result) {
         }).catch(console.error);
       
-        var vis2= "visualizations/gender_department.vl.json";
-        vegaEmbed('#splitbar', vis2, {"actions": false}).then(function(result) {
-        }).catch(console.error);
+        // var vis2= "visualizations/gender_department.vl.json";
+        // vegaEmbed('#splitbar', vis2, {"actions": false}).then(function(result) {
+        // }).catch(console.error);
 
         var vis3= "visualizations/gender_split_isotype.vl.json";
         vegaEmbed('#isotype', vis3, {"actions": false}).then(function(result) {
