Added findings and summary

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
             </div>
 
             <div class="pure-g">
+                <div class="pure-u-1-1">
                 <h2>Gender Breakdown of Artists</h2>
+            </div>
                 <div class="pure-u-1-2">
                       <div id="isotype"></div>
                   </div>
@@ -98,7 +100,33 @@
             <div class="pure-g">
                 <div class="pure-u-1-1">
                     <h2>Findings and Summary</h2>
-                    <p>In summary, these visualizations not only illuminate aspects of MoMA's collection but also provoke thoughtful discussions on global influence, gender representation, departmental diversity, and the intricacies of artistic creation. They serve as powerful tools for fostering dialogue, encouraging critical reflection, and furthering the appreciation of art in all its dimensions.</p>
+                    <p>
+                        <b>1. Western Dominance in MoMA's Collection:</b>
+                        <br>
+                        The visualization of the MoMA dataset reveals a notable concentration of curated artwork from Western countries. Acknowledging and addressing this bias is crucial for fostering a more inclusive and globally representative art collection.
+                        <br><br>
+
+
+                        <b>2. Gender Disparity in Artist Representation: </b><br>
+                        The dataset highlights a substantial gender disparity, with 87% of the curated artworks attributed to male artists and only 13% to female artists. This emphasizes the need for initiatives that promote gender diversity and amplify the voices of female artists. 
+                        <br>
+                        <br>
+
+                        <b>3. Contemporary Art Prevails, Romanticism Minimal:</b><br>
+                        This observation reflects evolving curatorial preferences and an inclination towards more contemporary expressions. It also offers insights into the changing tastes and interests of museum visitors.
+                        <br><br>
+
+                        <b>4. France and the UK: Longstanding Artistic Histories:</b><br>
+                        France and the United Kingdom emerge as key contributors to the MOMA dataset, suggesting a long and rich history in art. The prominence of these countries underscores their enduring cultural influence and contributions to Western art. 
+
+                        <br><br>
+
+                        <b>5. Efficiency and Production Disparities Across Regions</b>
+                        Oriental and African countries are observed to take shorter periods to produce artworks but contribute fewer art pieces compared to their Western counterparts.
+                        <br><br><br>
+
+
+                        In summary, these visualizations not only illuminate aspects of MoMA's collection but also provoke thoughtful discussions on global influence, gender representation, departmental diversity, and the intricacies of artistic creation. They serve as powerful tools for fostering dialogue, encouraging critical reflection, and furthering the appreciation of art in all its dimensions.</p>
                 </div>
             </div>
             <div class="pure-g">
