Fixed error where vis will pass sticky nav

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <header>
             <img src="resources/MOMA HEADER.jpg"
                 alt="Picture shows a person visiting the museum looking at the art pieces.">
-                <p id="0"></p>
+                <div id="0"></div>
         </header>
 
         <div class="pure-g">
@@ -55,7 +55,7 @@
                 <br> <br>
                 <div id="choropleth_map"></div>
                 </p>
-            </div><p id="1">
+            </div><div id="1"></div>
         </div>
         <div class="pure-g">
             <div class="pure-u-1-1">
@@ -68,7 +68,7 @@
                     . This underscores the global nature of MoMA's acquisitions, showcasing a mainly <b>more western</b>
                     but diverse range of artistic expressions and cultural influences from these nations.
                 </p>
-                <p id="2"></p>
+                <div id="2"></div>
 
             </div>
         </div>
@@ -92,7 +92,7 @@
                     such imbalances in artistic representation. Traditionally, the art world has been marked by gender
                     inequalities, where male artists historically received more recognition, opportunities, and
                     institutional support compared to their female counterparts.
-                </p><p id="3"></p>
+                </p><div id="3"></div>
 
                 <h2>Artistic Periods Sorted by Number of Artworks</h2>
 
@@ -107,7 +107,7 @@
                         Museums like MoMA often act as cultural trendsetters, and their curatorial choices can reflect
                         the evolving nature of the art world. The minimized representation of Romanticism may signify a
                         conscious decision to showcase a diverse range of artistic movements.</p>
-                        <p id="4"></p>
+                        <div id="4"></div>
                 </div>
             </div>
         </div>
@@ -127,12 +127,13 @@
                 </p>
             </div>
         </div>
+        <div id="5"></div>
 
 
 
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <h2 id="5">Distribution of works between the time taken, the country and the number of art pieces
+                <h2>Distribution of works between the time taken, the country and the number of art pieces
                     created</h2>
 
                 <div id="scatter_plot" class="center-container"></div>
@@ -144,7 +145,7 @@
                     pieces—thereby contributing to a comprehensive understanding of artistic production dynamics on a
                     global scale.
                 </p>
-                <p id="6"></p>
+                <div id="6"></div>
 
             </div>
         </div>
@@ -193,9 +194,10 @@
                 </p>
             </div>
         </div>
+        <div id="7"></div>
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <h2 id="7">References</h2>
+                <h2>References</h2>
                 <p>
                     jwoLondon. (n.d.). Isotype Dot Plot with Emoji. Vega-Lite. Retrieved October 11, 2023, from <a
                         href=https://vega.github.io/vega-lite/examples/isotype_bar_chart_emoji.html>
